# Avy-ERP

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Notifications_QA.md  chanelog.md  project-structure.md
docdiff-service/: .env.example  .gitignore  ACCURACY.md  Dockerfile  ROADMAP.md  alembic.ini  clear_queue.py  docker-compose.yml  fetch_openrouter.py  list_models.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_anthropic.py  test_openrouter.py  test_openrouter_img.py
docdiff-service/alembic/: env.py
docdiff-service/alembic/versions/: 671d728b59d1_initial_docdiff_schema.py  c798bf45b3e9_add_reviewer_corrections_table.py
docdiff-service/app/: config.py  database.py  main.py
docdiff-service/app/ai/: anthropic_provider.py  base.py  google_provider.py  openrouter_provider.py  qwen_local_provider.py  response_parser.py  router.py
docdiff-service/app/api/: api_keys.py  deps.py  differences.py  documents.py  health.py  jobs.py  reports.py  router.py  sse.py
docdiff-service/app/auth/: api_key.py  jwt_validator.py  middleware.py
docdiff-service/app/models/: __init__.py  api_key.py  base.py  correction.py  difference.py  document.py  job.py  report.py
docdiff-service/app/pdf/: fast_parser.py  metadata.py  parser.py  renderer.py  report_generator.py
docdiff-service/app/pipeline/: orchestrator.py  stage_1_ingestion.py  stage_2_classification.py  stage_3_extraction.py  stage_4_normalization.py  stage_5_alignment.py  stage_6_diff.py  stage_7_scoring.py  stage_8_assembly.py  visual_compare.py
docdiff-service/app/prompts/: classify_difference.py  (+4 more)
(+119 files in other folders)
